assets/css/_home.scss
.home-circle-container {
  width: 40%;

  @media #{$query-md} {
    width: 100%;
  }
}

.home-scroll-screen-content {
  margin-left: 40%;
  min-height: 60vh;
  margin-right: 3rem;

  @media #{$query-md} {
    margin-left: 0;
    margin-right: 0;
    min-height: 100vh;
  }
}

.t1 {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

